Resolving version issues